# luks-stage1-sddm

./: .envrc  .gitignore  Cargo.toml  MODULE_OPTIONS.md  README.md  default.nix  flake.nix
.config/: hakari.toml
nix/: default.nix  minimal-kde.nix  minimal-mesa.nix  minimal-qt6.nix  minimal-qtbase.nix  minimal-sddm.nix  packages.nix  sddm-sysroot-pivot.patch
nix/nixos/: breeze-fixups.nix  build-closure.py  build-cursor-atlas.py  build-theme-env.py  default.nix  module.nix  sddm-handoff.nix  squashed-closure.nix  theming.nix
nix/nixos/modules/: default.nix
nix/patches/: kiconthemes-minimal.patch  kirigami-no-http-icons.patch  libplasma-minimal.patch  plasma-workspace-CMakeLists.txt  qtbase-eglfs-kms-desktop-gl.patch  qtbase-linuxfb-platform-theme.patch
nix/patches/libplasma-stub/: CMakeLists.txt  Window.qml  corebindingsplugin.cpp
pam-module/: Cargo.toml
pam-module/src/: lib.rs
sddm-daemon/: Cargo.toml
sddm-daemon/src/: control_server.rs  failsafe.rs  login_controller.rs  main.rs  password_agent.rs  power_actions.rs  sddm_config.rs
test/: configuration.nix  dev_vm.nix
